# green-vita

./: .gitignore  Cargo.toml  Makefile  README.md
.cargo/: config.toml
.github/workflows/: release.yml
src/: i18n.rs  input.rs  jobs.rs  main.rs  safe_memory.rs  settings.rs
src/api/: mod.rs
src/api/catalog/: backend.rs  cache.rs  mod.rs  worker.rs
src/api/streaming/: mod.rs
src/api/streaming/rtc/: ice.rs  media.rs  mod.rs  peer.rs  rtp.rs  session.rs  transport.rs  worker.rs
src/api_xbox/: api.rs  auth.rs  catalog.rs  game_catalog.rs  mod.rs  stream.rs
src/api_xbox/streaming/: backend.rs  mod.rs
src/api_xbox/streaming/control/: channel.rs  input.rs
src/app/: command.rs  entry.rs  image.rs  jobs.rs  mod.rs  service.rs  state.rs  titles.rs
src/app/stream_session/: connection.rs  mod.rs  playback.rs  session.rs
src/app/ui/: fonts.rs  header.rs  mod.rs  theme.rs  widgets.rs
src/i18n/: ar-SA.ftl  de-DE.ftl  en-GB.ftl  en-US.ftl  es-ES.ftl  es-MX.ftl  fr-FR.ftl  it-IT.ftl  ja-JP.ftl  ko-KR.ftl  nl-NL.ftl  pl-PL.ftl  pt-BR.ftl  pt-PT.ftl  ru-RU.ftl  sv-SE.ftl  tr-TR.ftl  zh-CN.ftl  zh-TW.ftl
src/shell/: egui_painter.rs  mod.rs  surface.rs
src/streaming/: audio.rs  input.rs  input_metrics.rs  mod.rs
src/streaming/control/: channel.rs  input.rs  metrics.rs  mod.rs
src/streaming/rtc/: ice.rs  media.rs  mod.rs  peer.rs  rtp.rs  session.rs  worker.rs
src/streaming/video/: decoder.rs  memory.rs  metrics.rs  mod.rs  worker.rs
src/xbox_api/: api.rs  auth.rs  catalog.rs  catalog_worker.rs  mod.rs  stream.rs
static/sce_sys/: icon0.png~
(+18 files in other folders)
