[package]
name = "green-vita"
version = "0.1.7"
edition = "2024"

[dependencies]
anyhow = "1"
bytes = "1"
crossbeam-channel = "0.5"
egui = "0.31"
fluent-bundle = "0.15"
h264-reader = "0.8"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
qrcode = { version = "0.14", default-features = false }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
ring = "0.17"
rtc = "0.20.0-rc.2"
rtc-media = "0.20.0-rc.2"
rtcp = { version = "0.20.0-rc.2", package = "rtc-rtcp" }
sdl2 = { version = "0.38", features = ["use-pkgconfig", "unsafe_textures"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "net", "rt", "sync", "time"] }
unic-langid = "0.9"
uuid = { version = "1", features = ["v4", "serde"] }
vita-newlib-shims = "0.3"
vitasdk-sys = { version = "0.3", features = ["SceAppUtil_stub", "SceKernelDmacMgr_stub", "SceKernelThreadMgr_stub", "SceLibKernel_stub", "SceVideodec_stub", "SceSysmem_stub", "SceSysmodule_stub"] }

[patch.crates-io]
ring = { git = "https://github.com/vita-rust/ring.git", branch = "v0.17.14-vita" }
rtc-shared = { git = "https://github.com/Day-OS/rtc.git", branch = "vita" }

[package.metadata.vita]
title_id = "GREENVITA"
title_name = "GreenVita"
assets = "static"
